Fixes: - send username with getOwnMemes - fixed createByAPI visibility options - enforced title for createByAPI, publish imgFlip template automatically - visual improvements - updated TODOs

--- a/finalproject/frontend/src/style/CreateCustom.scss
+++ b/finalproject/frontend/src/style/CreateCustom.scss
@@ -1,4 +1,8 @@
 #create-custom-page-wrapper {
+    h2 {
+        margin-bottom: 13px;
+    }
+
     padding: 20px;
     box-sizing: border-box;
 
