--- a/finalproject/frontend/src/style/SingleView.scss
+++ b/finalproject/frontend/src/style/SingleView.scss
@@ -75,7 +75,6 @@
             background-color: #eee;
             margin-right: 10px;
             width: calc(100% - 3 * (#{$shareImgDims} + 2 * #{$shareImgPadding}) - #{$gap});
-            vertical-align: bottom;
             text-align: center;
             border-radius: 12px;
            
