--- a/finalproject/frontend/src/style/TemplateList.scss
+++ b/finalproject/frontend/src/style/TemplateList.scss
@@ -1,17 +1,14 @@
 #template-list-wrapper {
 
     .voice-control-button {
-        //font-size: 11px;
-        text-align: center;
         background-color: transparent;
-        vertical-align: middle;
-        margin: 8px 0;
+        margin: 8px auto;
         padding: 6px;
         border-radius: 12px;
         margin-bottom: 20px;
         border-color: lightgrey;
         color: #65c1ff;
-        
+        display: block;
     }
 
     #navbutton-wrapper {
